--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,53 +5,15 @@ services:
     build: .
     ports:
       - "5000:5000"
-    environment:
-      - FLASK_APP=run.py
-      - FLASK_DEBUG=0
-      - FLASK_ENV=production
-      - SECRET_KEY=change-this-in-production
-      - DATABASE_URL=postgresql://qoe_user:qoe_password@db:5432/qoe_db
-      - REDIS_URL=redis://redis:6379/0
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     volumes:
+      # Mount the project directory to the container for live code updates
       - .:/app
-    depends_on:
-      - db
-      - redis
-    restart: always
-    command: >
-      sh -c "flask db upgrade &&
-             gunicorn --bind 0.0.0.0:5000 --workers 2 run:app"
-
-  celery_worker:
-    build: .
     environment:
-      - FLASK_APP=run.py
-      - DATABASE_URL=postgresql://qoe_user:qoe_password@db:5432/qoe_db
-      - REDIS_URL=redis://redis:6379/0
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
-    depends_on:
-      - web
-      - redis
-      - db
-    restart: always
-    command: celery -A run:celery worker --loglevel=info
+      # Set environment to development to enable debug mode and auto-reloading
+      - FLASK_ENV=development
+      # A default secret key for development. This should be changed in production.
+      - SECRET_KEY=a-secure-secret-key-for-development
 
-  db:
-    image: postgres:13-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=qoe_user
-      - POSTGRES_PASSWORD=qoe_password
-      - POSTGRES_DB=qoe_db
-    restart: always
-    ports:
-      - "5432:5432"
-
-  redis:
     image: redis:6-alpine
     volumes:
       - redis_data:/data
