--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,128 @@
-Flask
-Flask-SQLAlchemy
-Flask-Login
-Flask-WTF
-Flask-SocketIO
-Flask-Migrate
-Flask-Cors
-Flask-RESTful
-SQLAlchemy
-python-socketio
+alembic==1.16.2
+amqp==5.3.1
+aniso8601==10.0.1
+appdirs==1.4.4
+APScheduler==3.11.0
+attrs==25.3.0
+bcrypt==4.3.0
+bidict==0.23.1
+billiard==4.2.1
+black==23.7.0
+blinker==1.9.0
 celery==5.3.1
-redis==4.6.0
-gunicorn==21.2.0
-python-dotenv==1.0.0
-werkzeug
+certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+contourpy==1.3.2
+coverage==7.9.1
+cryptography==44.0.3
+cycler==0.12.1
+defusedxml==0.7.1
+dnspython==2.7.0
 email-validator==2.0.0
-pandas>=2.2.0
-numpy>=2.0.0
-scikit-learn
-matplotlib
-seaborn
-requests==2.31.0
+eventlet==0.39.1
+flake8==6.0.0
+Flask==3.1.1
+flask-cors==6.0.1
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-RESTful==0.3.10
+Flask-SocketIO==5.5.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+fonttools==4.58.4
+fpdf2==2.8.3
+future==1.0.0
+greenlet==3.2.1
+gunicorn==21.2.0
+h11==0.16.0
+idna==3.10
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.1
+junos-eznc==2.7.4
+kiwisolver==1.4.8
+kombu==5.5.4
+lxml==5.4.0
+Mako==1.3.10
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mccabe==0.7.0
+mdurl==0.1.2
+mypy_extensions==1.1.0
+napalm==5.0.0
+ncclient==0.6.15
+netaddr==1.3.0
+netmiko==4.5.0
+netutils==1.13.0
+ntc_templates==7.8.0
+numpy==2.3.1
+outcome==1.3.0.post0
+packaging==25.0
+pandas==2.3.0
+paramiko==3.5.1
+pathspec==0.12.1
+pillow==11.2.1
+platformdirs==4.3.8
+pluggy==1.6.0
+prompt_toolkit==3.0.51
+psutil==7.0.0
+pycodestyle==2.10.0
+pycparser==2.22
+pyeapi==1.0.4
+pyflakes==3.0.1
+Pygments==2.19.1
+PyNaCl==1.5.0
+pyparsing==3.2.3
+pyserial==3.5
+pyshark==0.6
+PySocks==1.7.1
 pytest==7.4.0
 pytest-cov==4.1.0
-black==23.7.0
-flake8==6.0.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+python-engineio==4.12.0
+python-socketio==5.13.0
+pytz==2025.2
+PyYAML==6.0.2
+redis==4.6.0
+requests==2.31.0
+rich==14.0.0
+ruamel.yaml==0.18.10
+scikit-learn==1.7.0
+scipy==1.16.0
+scp==0.15.0
+seaborn==0.13.2
+selenium==4.33.0
+setuptools==80.9.0
+simple-websocket==1.1.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.41
+termcolor==3.0.1
+textfsm==1.1.3
+threadpoolctl==3.6.0
+transitions==0.9.2
+trio==0.30.0
+trio-websocket==0.12.2
+ttp==0.9.5
+ttp-templates==0.3.7
+typing_extensions==4.13.2
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+vine==5.1.0
+wcwidth==0.2.13
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+WTForms==3.2.1
+yamlordereddictloader==0.4.2
